Shrinks basic values file with assumption of overwrite

--- a/packages/supabase/bitnami-values-basic.yaml
+++ b/packages/supabase/bitnami-values-basic.yaml
@@ -12,381 +12,27 @@
 ## @param global.storageClass Global StorageClass for Persistent Volume(s)
 ##
 global:
-  imageRegistry: ""
-  ## E.g.
-  ## imagePullSecrets:
-  ##   - myRegistryKeySecretName
-  ##
-  imagePullSecrets: []
-  storageClass: ""
   ## We need to add the existing secret in global in order to make it accessible to the Kong subchart
   ##
   jwt:
     ## @param global.jwt.existingSecret The name of the existing secret containing the JWT secret
     ##
     existingSecret: ""
-    ## @param global.jwt.existingSecretKey The key in the existing secret containing the JWT secret
-    ##
-    existingSecretKey: "secret"
-    ## @param global.jwt.existingSecretAnonKey The key in the existing secret containing the JWT anon key
-    ##
-    existingSecretAnonKey: "anon-key"
-    ## @param global.jwt.existingSecretServiceKey The key in the existing secret containing the JWT service key
-    ##
-    existingSecretServiceKey: "service-key"
-  ## Compatibility adaptations for Kubernetes platforms
-  ##
-  compatibility:
-    ## Compatibility adaptations for Openshift
-    ##
-    openshift:
-      ## @param global.compatibility.openshift.adaptSecurityContext Adapt the securityContext sections of the deployment to make them compatible with Openshift restricted-v2 SCC: remove runAsUser, runAsGroup and fsGroup and let the platform use their allowed default IDs. Possible values: auto (apply if the detected running cluster is Openshift), force (perform the adaptation always), disabled (do not perform adaptation)
-      ##
-      adaptSecurityContext: auto
-## @section Common parameters
-##
 
-## @param kubeVersion Override Kubernetes version
-##
-kubeVersion: ""
-## @param nameOverride String to partially override common.names.name
-##
-nameOverride: ""
-## @param fullnameOverride String to fully override common.names.fullname
-##
-fullnameOverride: ""
-## @param namespaceOverride String to fully override common.names.namespace
-##
-namespaceOverride: ""
-## @param commonLabels Labels to add to all deployed objects
-##
-commonLabels:
-  sidecar.istio.io/inject: "false"
-## @param commonAnnotations Annotations to add to all deployed objects
-##
-commonAnnotations: {}
-## @param clusterDomain Kubernetes cluster domain name
-##
-clusterDomain: cluster.local
-## @param extraDeploy Array of extra objects to deploy with the release
-##
-extraDeploy: []
-## Enable diagnostic mode in the deployment
-##
-diagnosticMode:
-  ## @param diagnosticMode.enabled Enable diagnostic mode (all probes will be disabled and the command will be overridden)
-  ##
-  enabled: false
-  ## @param diagnosticMode.command Command to override all containers in the deployment
-  ##
-  command:
-    - sleep
-  ## @param diagnosticMode.args Args to override all containers in the deployment
-  ##
-  args:
-    - infinity
 ## @section Supabase Common parameters
 ##
 jwt:
-  ## @param jwt.secret The secret string used to sign JWT tokens
-  ##
-  secret: ""
-  ## @param jwt.anonKey JWT string for annonymous users
-  ##
-  anonKey: ""
-  ## @param jwt.serviceKey JWT string for service users
-  ##
-  serviceKey: ""
   autoGenerate:
     ## @param jwt.autoGenerate.forceRun Force the run of the JWT generation job
     ##
     forceRun: true
-    ## Bitnami JWT CLI image
-    ## ref: https://hub.docker.com/r/bitnami/jwt-cli/tags/
-    ## @param jwt.autoGenerate.image.registry [default: REGISTRY_NAME] JWT CLI image registry
-    ## @param jwt.autoGenerate.image.repository [default: REPOSITORY_NAME/jwt-cli] JWT CLI image repository
-    ## @skip jwt.autoGenerate.image.tag JWT CLI image tag (immutable tags are recommended)
-    ## @param jwt.autoGenerate.image.digest JWT CLI image digest in the way sha256:aa.... Please note this parameter, if set, will override the tag image tag (immutable tags are recommended)
-    ## @param jwt.autoGenerate.image.pullPolicy JWT CLI image pull policy
-    ## @param jwt.autoGenerate.image.pullSecrets JWT CLI image pull secrets
-    ##
-    image:
-      registry: docker.io
-      repository: bitnami/jwt-cli
-      tag: 6.0.0-debian-12-r19
-      digest: ""
-      ## Specify a imagePullPolicy
-      ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
-      ## ref: http://kubernetes.io/docs/concepts/containers/images/#pre-pulled-images
-      ##
-      pullPolicy: IfNotPresent
-      ## Optionally specify an array of imagePullSecrets.
-      ## Secrets must be manually created in the namespace.
-      ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
-      ## e.g:
-      ## pullSecrets:
-      ##   - myRegistryKeySecretName
-      ##
-      pullSecrets: []
-    kubectlImage:
-      ## Bitnami Kubectl image
-      ## ref: https://hub.docker.com/r/bitnami/kubectl/tags/
-      ## @param jwt.autoGenerate.kubectlImage.registry [default: REGISTRY_NAME] Kubectl image registry
-      ## @param jwt.autoGenerate.kubectlImage.repository [default: REPOSITORY_NAME/kubectl] Kubectl image repository
-      ## @skip jwt.autoGenerate.kubectlImage.tag Kubectl image tag (immutable tags are recommended)
-      ## @param jwt.autoGenerate.kubectlImage.digest Kubectl image digest in the way sha256:aa.... Please note this parameter, if set, will override the tag
-      ## @param jwt.autoGenerate.kubectlImage.pullPolicy Kubectl image pull policy
-      ## @param jwt.autoGenerate.kubectlImage.pullSecrets Kubectl image pull secrets
-      ##
-      registry: docker.io
-      repository: bitnami/kubectl
-      tag: 1.29.3-debian-12-r4
-      digest: ""
-      ## Specify a imagePullPolicy
-      ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
-      ## ref: https://kubernetes.io/docs/concepts/containers/images/#pre-pulled-images
-      ##
-      pullPolicy: IfNotPresent
-      ## Optionally specify an array of imagePullSecrets (secrets must be manually created in the namespace)
-      ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
-      ## Example:
-      ## pullSecrets:
-      ##   - myRegistryKeySecretName
-      ##
-      pullSecrets: []
-    ## @param jwt.autoGenerate.backoffLimit set backoff limit of the job
-    ##
-    backoffLimit: 10
-    ## @param jwt.autoGenerate.extraVolumes Optionally specify extra list of additional volumes for the jwt init job
-    ##
-    extraVolumes: []
-    ## Configure extra options for Supabase auth containers' liveness and readiness probes
-    ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#configure-probes
-    ## @param jwt.autoGenerate.livenessProbe.enabled Enable livenessProbe on Supabase auth containers
-    ## @param jwt.autoGenerate.livenessProbe.initialDelaySeconds Initial delay seconds for livenessProbe
-    ## @param jwt.autoGenerate.livenessProbe.periodSeconds Period seconds for livenessProbe
-    ## @param jwt.autoGenerate.livenessProbe.timeoutSeconds Timeout seconds for livenessProbe
-    ## @param jwt.autoGenerate.livenessProbe.failureThreshold Failure threshold for livenessProbe
-    ## @param jwt.autoGenerate.livenessProbe.successThreshold Success threshold for livenessProbe
-    ##
-    livenessProbe:
-      enabled: true
-      initialDelaySeconds: 5
-      periodSeconds: 10
-      timeoutSeconds: 5
-      failureThreshold: 6
-      successThreshold: 1
-    ## @param jwt.autoGenerate.readinessProbe.enabled Enable readinessProbe on Supabase auth containers
-    ## @param jwt.autoGenerate.readinessProbe.initialDelaySeconds Initial delay seconds for readinessProbe
-    ## @param jwt.autoGenerate.readinessProbe.periodSeconds Period seconds for readinessProbe
-    ## @param jwt.autoGenerate.readinessProbe.timeoutSeconds Timeout seconds for readinessProbe
-    ## @param jwt.autoGenerate.readinessProbe.failureThreshold Failure threshold for readinessProbe
-    ## @param jwt.autoGenerate.readinessProbe.successThreshold Success threshold for readinessProbe
-    ##
-    readinessProbe:
-      enabled: true
-      initialDelaySeconds: 5
-      periodSeconds: 10
-      timeoutSeconds: 5
-      failureThreshold: 6
-      successThreshold: 1
-    ## @param jwt.autoGenerate.startupProbe.enabled Enable startupProbe on Supabase auth containers
-    ## @param jwt.autoGenerate.startupProbe.initialDelaySeconds Initial delay seconds for startupProbe
-    ## @param jwt.autoGenerate.startupProbe.periodSeconds Period seconds for startupProbe
-    ## @param jwt.autoGenerate.startupProbe.timeoutSeconds Timeout seconds for startupProbe
-    ## @param jwt.autoGenerate.startupProbe.failureThreshold Failure threshold for startupProbe
-    ## @param jwt.autoGenerate.startupProbe.successThreshold Success threshold for startupProbe
-    ##
-    startupProbe:
-      enabled: false
-      initialDelaySeconds: 5
-      periodSeconds: 10
-      timeoutSeconds: 5
-      failureThreshold: 6
-      successThreshold: 1
-    ## @param jwt.autoGenerate.customLivenessProbe Custom livenessProbe that overrides the default one
-    ##
-    customLivenessProbe: {}
-    ## @param jwt.autoGenerate.customReadinessProbe Custom readinessProbe that overrides the default one
-    ##
-    customReadinessProbe: {}
-    ## @param jwt.autoGenerate.customStartupProbe Custom startupProbe that overrides the default one
-    ##
-    customStartupProbe: {}
-    ## Network Policy configuration
-    ## ref: https://kubernetes.io/docs/concepts/services-networking/network-policies/
-    ##
-    networkPolicy:
-      ## @param jwt.autoGenerate.networkPolicy.enabled Enable creation of NetworkPolicy resources
-      ##
-      enabled: true
-      ## @param jwt.autoGenerate.networkPolicy.allowExternal The Policy model to apply
-      ## When set to false, only pods with the correct client label will have network access to the ports Mastodon is
-      ## listening on. When true, Mastodon will accept connections from any source (with the correct destination port).
-      ##
-      allowExternal: true
-      ## @param jwt.autoGenerate.networkPolicy.allowExternalEgress Allow the pod to access any range of port and all destinations.
-      ##
-      allowExternalEgress: true
-      ## @param jwt.autoGenerate.networkPolicy.kubeAPIServerPorts [array] List of possible endpoints to kube-apiserver (limit to your cluster settings to increase security)
-      ##
-      kubeAPIServerPorts: [443, 6443, 8443]
-      ## @param jwt.autoGenerate.networkPolicy.extraIngress [array] Add extra ingress rules to the NetworkPolicy
-      ## e.g:
-      ## extraIngress:
-      ##   - ports:
-      ##       - port: 1234
-      ##     from:
-      ##       - podSelector:
-      ##           - matchLabels:
-      ##               - role: frontend
-      ##       - podSelector:
-      ##           - matchExpressions:
-      ##               - key: role
-      ##                 operator: In
-      ##                 values:
-      ##                   - frontend
-      ##
-      extraIngress: []
-      ## @param jwt.autoGenerate.networkPolicy.extraEgress [array] Add extra ingress rules to the NetworkPolicy
-      ## e.g:
-      ## extraEgress:
-      ##   - ports:
-      ##       - port: 1234
-      ##     to:
-      ##       - podSelector:
-      ##           - matchLabels:
-      ##               - role: frontend
-      ##       - podSelector:
-      ##           - matchExpressions:
-      ##               - key: role
-      ##                 operator: In
-      ##                 values:
-      ##                   - frontend
-      ##
-      extraEgress: []
-      ## @param jwt.autoGenerate.networkPolicy.ingressNSMatchLabels [object] Labels to match to allow traffic from other namespaces
-      ## @param jwt.autoGenerate.networkPolicy.ingressNSPodMatchLabels [object] Pod labels to match to allow traffic from other namespaces
-      ##
-      ingressNSMatchLabels: {}
-      ingressNSPodMatchLabels: {}
-    ## ServiceAccount configuration
-    ##
-    serviceAccount:
-      ## @param jwt.autoGenerate.serviceAccount.create Specifies whether a ServiceAccount should be created
-      ##
-      create: true
-      ## @param jwt.autoGenerate.serviceAccount.name The name of the ServiceAccount to use.
-      ## If not set and create is true, a name is generated using the common.names.fullname template
-      ##
-      name: ""
-      ## @param jwt.autoGenerate.serviceAccount.annotations Additional Service Account annotations (evaluated as a template)
-      ##
-      annotations: {}
-      ## @param jwt.autoGenerate.serviceAccount.automountServiceAccountToken Automount service account token for the server service account
-      ##
-      automountServiceAccountToken: false
-    ## Configure Container Security Context
-    ## @param jwt.autoGenerate.containerSecurityContext.enabled Enabled jwt init job containers' Security Context
-    ## @param jwt.autoGenerate.containerSecurityContext.seLinuxOptions [object,nullable] Set SELinux options in container
-    ## @param jwt.autoGenerate.containerSecurityContext.runAsUser Set jwt init job containers' Security Context runAsUser
-    ## @param jwt.autoGenerate.containerSecurityContext.runAsGroup Set jwt init job containers' Security Context runAsUser
-    ## @param jwt.autoGenerate.containerSecurityContext.runAsNonRoot Set jwt init job container's Security Context runAsNonRoot
-    ## @param jwt.autoGenerate.containerSecurityContext.privileged Set jwt init job container's Security Context privileged
-    ## @param jwt.autoGenerate.containerSecurityContext.readOnlyRootFilesystem Set jwt init job container's Security Context readOnlyRootFilesystem
-    ## @param jwt.autoGenerate.containerSecurityContext.allowPrivilegeEscalation Set jwt init job container's Security Context allowPrivilegeEscalation
-    ## @param jwt.autoGenerate.containerSecurityContext.capabilities.drop List of jwt init job capabilities to be dropped
-    ## @param jwt.autoGenerate.containerSecurityContext.seccompProfile.type Set jwt init job container's Security Context seccomp profile
-    ##
-    containerSecurityContext:
-      enabled: true
-      seLinuxOptions: {}
-      runAsUser: 1001
-      runAsGroup: 1001
-      runAsNonRoot: true
-      privileged: false
-      readOnlyRootFilesystem: true
-      allowPrivilegeEscalation: false
-      capabilities:
-        drop: ["ALL"]
-      seccompProfile:
-        type: "RuntimeDefault"
-    ## Configure Pods Security Context
-    ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod
-    ## @param jwt.autoGenerate.podSecurityContext.enabled Enabled jwt init job pods' Security Context
-    ## @param jwt.autoGenerate.podSecurityContext.fsGroupChangePolicy Set filesystem group change policy
-    ## @param jwt.autoGenerate.podSecurityContext.sysctls Set kernel settings using the sysctl interface
-    ## @param jwt.autoGenerate.podSecurityContext.supplementalGroups Set filesystem extra groups
-    ## @param jwt.autoGenerate.podSecurityContext.fsGroup Set jwt init job pod's Security Context fsGroup
-    ##
-    podSecurityContext:
-      enabled: true
-      fsGroupChangePolicy: Always
-      sysctls: []
-      supplementalGroups: []
-      fsGroup: 1001
-    ## @param jwt.autoGenerate.extraEnvVars Array containing extra env vars to configure the jwt init job
-    ## For example:
-    ## extraEnvVars:
-    ##  - name: GF_DEFAULT_INSTANCE_NAME
-    ##    value: my-instance
-    ##
-    extraEnvVars: []
-    ## @param jwt.autoGenerate.extraEnvVarsCM ConfigMap containing extra env vars to configure the jwt init job
-    ##
-    extraEnvVarsCM: ""
-    ## @param jwt.autoGenerate.extraEnvVarsSecret Secret containing extra env vars to configure the jwt init job (in case of sensitive data)
-    ##
-    extraEnvVarsSecret: ""
-    ## @param jwt.autoGenerate.extraVolumeMounts Array of extra volume mounts to be added to the jwt Container (evaluated as template). Normally used with `extraVolumes`.
-    ##
-    extraVolumeMounts: []
-    ## Container resource requests and limits
-    ## ref: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/
-    ## @param jwt.autoGenerate.resourcesPreset Set container resources according to one common preset (allowed values: none, nano, micro, small, medium, large, xlarge, 2xlarge). This is ignored if jwt.autoGenerate.resources is set (jwt.autoGenerate.resources is recommended for production).
-    ## More information: https://github.com/bitnami/charts/blob/main/bitnami/common/templates/_resources.tpl#L15
-    ##
-    resourcesPreset: "medium"
-    ## @param jwt.autoGenerate.resources Set container requests and limits for different resources like CPU or memory (essential for production workloads)
-    ## Example:
-    ## resources:
-    ##   requests:
-    ##     cpu: 2
-    ##     memory: 512Mi
-    ##   limits:
-    ##     cpu: 3
-    ##     memory: 1024Mi
-    ##
-    resources: {}
-    ## @param jwt.autoGenerate.automountServiceAccountToken Mount Service Account token in pod
-    ##
-    automountServiceAccountToken: true
-    ## @param jwt.autoGenerate.hostAliases Add deployment host aliases
-    ## https://kubernetes.io/docs/concepts/services-networking/add-entries-to-pod-etc-hosts-with-host-aliases/
-    ##
-    hostAliases: []
     ## @param jwt.autoGenerate.annotations [object] Add annotations to the job
     ##
     annotations:
+      helm.sh/hook: null
       helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
       # This should be executed after the minio provisioning job
       helm.sh/hook-weight: "10"
-    ## @param jwt.autoGenerate.podLabels Additional pod labels
-    ## Ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
-    ##
-    podLabels:
-      sidecar.istio.io/inject: "false"
-    ## @param jwt.autoGenerate.podAnnotations Additional pod annotations
-    ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
-    ##
-    podAnnotations: {}
-## @param publicURL Supabase API public URL
-##
-publicURL: "https://supabase-kong.uds.dev"
-## @param dbSSL Supabase API database connection mode for SSL. Applied to all components. Allowed values: verify-ca, verify-full, disable, allow, prefer, require
-## https://www.postgresql.org/docs/current/libpq-ssl.html
-##
-dbSSL: "disable"
 ## @section Supabase Auth Parameters
 ##
 ##
@@ -447,29 +93,6 @@ volumePermissions:
   ## @param volumePermissions.enabled Enable init container that changes the owner/group of the PV mount point to `runAsUser:fsGroup`
   ##
   enabled: false
-## @section Other Parameters
-##
-
-## @param rbac.create Specifies whether RBAC resources should be created
-##
-rbac:
-  create: true
-## ServiceAccount configuration
-##
-serviceAccount:
-  ## @param serviceAccount.create Specifies whether a ServiceAccount should be created
-  ##
-  create: true
-  ## @param serviceAccount.name The name of the ServiceAccount to use.
-  ## If not set and create is true, a name is generated using the common.names.fullname template
-  ##
-  name: ""
-  ## @param serviceAccount.annotations Additional Service Account annotations (evaluated as a template)
-  ##
-  annotations: {}
-  ## @param serviceAccount.automountServiceAccountToken Automount service account token for the server service account
-  ##
-  automountServiceAccountToken: false
 ## @section Kong sub-chart parameters
 ##
 kong:
