--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -67,6 +67,7 @@ components:
         releaseName: supabase-bootstrap
         version: 4.0.1
         valuesFiles:
+          - "bitnami-values.yaml"
           - "bitnami-values-basic.yaml"
       - name: supabase-secrets-generator
         namespace: leapfrogai
