Adds uds package configs

--- a/uds-bundles/dev/cpu/uds-config.yaml
+++ b/uds-bundles/dev/cpu/uds-config.yaml
@@ -22,3 +22,10 @@ variables:
     model: vllm
     supabase_url: https://supabase-kong.uds.dev
     supabase_anon_key: ''
+
+  supabase:
+    leapfrogai:
+      package:
+        host: supabase-kong
+        name: supabase
+        component: kong
