--- a/uds-bundles/latest/cpu/uds-config.yaml
+++ b/uds-bundles/latest/cpu/uds-config.yaml
@@ -30,3 +30,10 @@ variables:
     model: vllm
     supabase_url: https://supabase-kong.uds.dev
     supabase_anon_key: ''
+
+  supabase:
+    leapfrogai:
+      package:
+        host: supabase-kong
+        name: supabase
+        component: kong
