--- a/packages/supabase/chart/templates/supabase-dashboard-secret.yaml
+++ b/packages/supabase/chart/templates/supabase-dashboard-secret.yaml
@@ -1,18 +1,21 @@
-{{- $dashboardPassword := randAlphaNum 10 }}
+{{- $dashboardPassword := randAlphaNum 10 }} 
 {{- $existingSecret := (lookup "v1" "Secret" .Release.Namespace "supabase-dashboard-secret") }}
+{{- if .Values.leapfrogai.testing }}
+{{- $dashboardPassword = "testing" }}
+{{- end }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: supabase-dashboard-secret
-  namespace: {{ .Release.Namespace }}
-  {{- if $existingSecret }}
-  annotations:
-    "helm.sh/resource-policy": keep
-  {{- end }}
+ name: supabase-dashboard-secret
+ namespace: {{ .Release.Namespace }}
+ {{- if $existingSecret }}
+ annotations:
+   "helm.sh/resource-policy": keep
+ {{- end }}
 type: Opaque
 data:
-  {{- if $existingSecret }}
-  password: {{ $existingSecret.data.password }}
-  {{- else }}
-  password: {{ $dashboardPassword | b64enc | quote }}
-  {{- end }}
+ {{- if $existingSecret }}
+ password: {{ $existingSecret.data.password }}
+ {{- else }}
+ password: {{ $dashboardPassword | b64enc | quote }}
+ {{- end }}
