--- a/src/leapfrogai_ui/.prettierrc
+++ b/src/leapfrogai_ui/.prettierrc
@@ -1,6 +1,6 @@
 {
-	"useTabs": true,
-	"tabWidth": 4,
+	"useTabs": false,
+	"tabWidth": 2,
 	"singleQuote": true,
 	"trailingComma": "none",
 	"printWidth": 100,
