--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -67,22 +67,22 @@ components:
         releaseName: supabase-bootstrap
         version: 4.0.1
         valuesFiles:
-          - "bitnami-values.yaml"
-          - "bitnami-values-basic.yaml"
+          - "bitnami-values-shrunk.yaml"
+          - "bitnami-values-bootstrap.yaml"
       - name: supabase-secrets-generator
         namespace: leapfrogai
         localPath: chart/
         releaseName: supabase-secrets-generator
         version: 0.0.1
         valuesFiles:
-          - "bitnami-values.yaml"
+          - "bitnami-values-shrunk.yaml"
       - name: supabase
         namespace: leapfrogai
         url: oci://registry-1.docker.io/bitnamicharts/supabase
         releaseName: supabase
         version: 4.0.1
         valuesFiles:
-          - "bitnami-values.yaml"
+          - "bitnami-values-shrunk.yaml"
     images:
       - docker.io/bitnami/gotrue:2.149.0-debian-12-r0
       - docker.io/bitnami/jwt-cli:6.0.0-debian-12-r19
