Fixes new keycloak secret template

--- a/packages/supabase/chart/templates/supabase-keycloak-secret.yaml
+++ b/packages/supabase/chart/templates/supabase-keycloak-secret.yaml
@@ -1,3 +1,4 @@
+{{- $keycloakSecret := "YOUR_KEYCLOAK_CLIENT_SECRET_GOES_HERE" }} 
 {{- $existingSecret := (lookup "v1" "Secret" .Release.Namespace "supabase-keycloak-secret") }}
 apiVersion: v1
 kind: Secret
@@ -9,5 +10,5 @@ data:
  {{- if $existingSecret }}
  secret: {{ $existingSecret.data.secret }}
  {{- else }}
- secret: "YOUR_KEYCLOAK_CLIENT_SECRET"
+ secret: {{ $keycloakSecret | b64enc | quote }}
  {{- end }}
