--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -83,7 +83,8 @@ jobs:
 
         - name: Test Supabase
           run: |
-            DASHBOARD_PASSWORD=$(uds zarf tools kubectl get secret supabase-dashboard-secret -n leapfrogai -o jsonpath='{.data.password}' | base64 -d)
+            dashboard_password=$(uds zarf tools kubectl get secret supabase-dashboard-secret -n leapfrogai -o jsonpath='{.data.password}' | base64 -d)
+            echo "DASHBOARD_PASSWORD=$dashboard_password" >> $GITHUB_ENV
             python -m pip install requests
             python -m pytest ./tests/e2e/test_supabase.py -v
 
