--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -84,12 +84,9 @@ jobs:
         - name: Set environment variable
           id: set-env-var
           run: |
-            DASHBOARD_PASSWORD=$(uds zarf tools kubectl get secret supabase-dashboard-secret -n leapfrogai -o jsonpath='{.data.password}' | base64 -d)
-            echo "::set-output name=dashboard_var::$DASHBOARD_PASSWORD"
+            echo "DASHBOARD_PASSWORD=$(uds zarf tools kubectl get secret supabase-dashboard-secret -n leapfrogai -o jsonpath='{.data.password}' | base64 -d)" >> "$GITHUB_ENV"
 
         - name: Test Supabase
-          env:
-            DASHBOARD_PASSWORD: ${{ steps.set-env-var.outputs.dashboard_var }}
           run: |
             python -m pip install requests
             python -m pytest ./tests/e2e/test_supabase.py -v
