Adds script to wait for network connection

--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -104,6 +104,7 @@ components:
           - cmd: kubectl delete cm supabase-kong-declarative-config -n leapfrogai 
         after:
           - cmd: kubectl rollout restart deployment supabase-kong -n leapfrogai
+          - cmd: ./scripts/wait-for-network.sh
     manifests:
       - name: supabase-manifests
         namespace: leapfrogai
