documenting integration tests

--- a/src/leapfrogai_api/Makefile
+++ b/src/leapfrogai_api/Makefile
@@ -4,3 +4,6 @@ install:
 dev:
 	make install
 	python -m uvicorn main:app --port 3000 --reload
+
+test-integration:
+	cd ../../ && python -m pytest tests/integration/api
