--- a/packages/ui/zarf.yaml
+++ b/packages/ui/zarf.yaml
@@ -1,14 +1,14 @@
 kind: ZarfPackageConfig
 metadata:
   name: leapfrogai-ui
-  version: "###ZARF_PKG_TMPL_IMAGE_VERSION###"
+  version: '###ZARF_PKG_TMPL_IMAGE_VERSION###'
   architecture: amd64
   description: >
     A UI for LeapfrogAI
 
 constants:
-  - name: LEAPFROGAI_UI_VERSION
-    value: "###ZARF_PKG_TMPL_IMAGE_VERSION###"
+  - name: IMAGE_VERSION
+    value: '###ZARF_PKG_TMPL_IMAGE_VERSION###'
 
 variables:
   - name: LEAPFROGAI_API_BASE_URL #LEAPFROGAI_API_BASE_URL
@@ -71,7 +71,7 @@ components:
         localPath: chart
         version: 0.6.1
         valuesFiles:
-          - "chart/ui-values.yaml"
+          - 'chart/ui-values.yaml'
     images:
       - ghcr.io/defenseunicorns/leapfrogai/leapfrogai-ui:###ZARF_PKG_TMPL_IMAGE_VERSION###
     actions:
