--- a/packages/ui/chart/templates/ui/deployment.yaml
+++ b/packages/ui/chart/templates/ui/deployment.yaml
@@ -42,6 +42,7 @@ spec:
                 secretKeyRef:
                   name: supabase-jwt
                   key: anon-key
+                  optional: true
               {{ end }}
             - name: PUBLIC_DISABLE_KEYCLOAK
               value: '###ZARF_VAR_DISABLE_KEYCLOAK###'
