--- a/packages/llama-cpp-python/pyproject.toml
+++ b/packages/llama-cpp-python/pyproject.toml
@@ -1,7 +1,10 @@
 [project]
 name = "lfai-llama-cpp-python"
-version = "0.6.1"
 description = "A LeapfrogAI API-compatible llama-cpp-python wrapper for quantized and un-quantized model inferencing on CPU infrastructures."
+
+# x-release-please-start-version
+version = "0.6.1"
+# x-release-please-end
 
 dependencies = [
     "llama-cpp-python == 0.2.28",
