--- a/packages/repeater/pyproject.toml
+++ b/packages/repeater/pyproject.toml
@@ -1,7 +1,10 @@
 [project]
 name = "lfai-repeater"
-version = "0.6.1"
 description = "A LeapfrogAI API-compatible pseudo-model for testing the API."
+
+# x-release-please-start-version
+version = "0.6.1"
+# x-release-please-end
 
 dependencies = [
     "leapfrogai-sdk",
