--- a/src/leapfrogai_api/pyproject.toml
+++ b/src/leapfrogai_api/pyproject.toml
@@ -1,7 +1,10 @@
 [project]
 name = "leapfrogai-api"
-version = "0.6.1"
 description = "An API for LeapfrogAI that allows LeapfrogAI backends to connect seamlessly"
+
+# x-release-please-start-version
+version = "0.6.1"
+# x-release-please-end
 
 dependencies = [
     "fastapi >= 0.109.1",
