--- a/packages/repeater/zarf-config.yaml
+++ b/packages/repeater/zarf-config.yaml
@@ -2,7 +2,9 @@ package:
   create:
     set:
       image_repository: "ghcr.io/defenseunicorns/leapfrogai/repeater"
+      # x-release-please-start-version
       image_version: 0.6.1
+      # x-release-please-end
       name: repeater
     max_package_size: "1000000000"
   deploy:
