--- a/packages/supabase/chart/templates/uds-package.yaml
+++ b/packages/supabase/chart/templates/uds-package.yaml
@@ -3,6 +3,17 @@ kind: Package
 metadata:
   name: {{ .Values.leapfrogai.package.name }}
 spec:
+  sso:
+    - name: Supabase
+      description: Client for logging into Supabase
+      clientId: uds-supabase
+      protocol: openid-connect
+      redirectUris:
+        - "https://supabase-kong.uds.dev/auth/v1/callback"
+        - "https://lfaiui.uds.dev/"
+      webOrigins:
+        - "https://supabase-kong.uds.dev/auth/v1/callback"
+        - "https://lfaiui.uds.dev/"
   network:
     expose:
       - service: supabase-kong
