--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -60,6 +60,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@carbon/colors": "^11.21.0",
     "@carbon/layout": "^11.20.0",
     "@carbon/themes": "^11.32.0",
     "@carbon/type": "^11.26.0",
