--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -141,6 +141,13 @@ kong:
       securityContext: {{- omit .Values.containerSecurityContext "enabled" | toYaml | nindent 6 }}
       {{- end }}
       env:
+        - name: SUPABASE_DASHBOARD_USERNAME
+          value: '###ZARF_CONST_DASHBOARD_USERNAME###'
+        - name: SUPABASE_DASHBOARD_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: supabase-dashboard-secret
+              key: password
         - name: SUPABASE_ANON_KEY
           valueFrom:
             secretKeyRef:
@@ -160,7 +167,7 @@ kong:
       - name: KONG_DNS_ORDER
         value: LAST,A,CNAME
       - name: KONG_PLUGINS
-        value: request-transformer,cors,key-auth,acl
+        value: request-transformer,cors,key-auth,acl,basic-auth
     resourcesPreset: "none"
     livenessProbe:
       timeoutSeconds: 40
