--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -7,6 +7,9 @@ metadata:
     supabase instance and all of its dependencies
 
 constants:
+  - name: DASHBOARD_USERNAME
+    description: The dashboard's (Supabase studio) default username
+    value: supabase-admin
   - name: EXTERNAL_KEYCLOAK_CLIENT_ID
     description: 'External keycloak client value'
     value: "uds-supabase"
@@ -92,3 +95,23 @@ components:
       - docker.io/bitnami/supabase-storage:0.48.4-debian-12-r0
       - docker.io/bitnami/supabase-studio:0.24.3-debian-12-r0
       - docker.io/bitnami/kong:3.6.1-debian-12-r13
+  - name: supabase-post-process
+    description: "Perform necessary post processing here"
+    required: true
+    actions:
+      onDeploy:
+        before:
+          # Deletes the initial kong config created by the upstream chart
+          - cmd: kubectl delete cm supabase-kong-declarative-config -n leapfrogai
+        after:
+          # Restarts supabase-kong after the new kong config has been applied
+          # so that it can be loaded into the kong container
+          - cmd: kubectl rollout restart deployment supabase-kong -n leapfrogai
+          - cmd: kubectl rollout status deployment supabase-kong -n leapfrogai
+    manifests:
+      # Applies an update kong config that includes basic auth, this gets applied
+      # after the kong pods have started so the original config needs to be deleted and pod restarted
+      - name: supabase-manifests
+        namespace: leapfrogai
+        files:
+          - "manifests/declarative-conf-configmap.yaml"
