--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -183,3 +183,7 @@ postgresql:
       sidecar.istio.io/inject: "false"
   commonAnnotations:
     helm.sh/resource-policy: keep
+  ## @param postgresql.postgresqlSharedPreloadLibraries Set the shared_preload_libraries parameter in postgresql.conf
+  ## Setting an empty value in order to force the default extensions of supabase-postgres
+  ##
+  postgresqlSharedPreloadLibraries: "pg_stat_statements, pg_stat_monitor, pgaudit, plpgsql, plpgsql_check, pg_cron, pg_net, pgsodium, timescaledb, auto_explain, vector"
